--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="widt = device-width, initial-scale=1">
   <title>Theo Hronowsky</title>
+  <link href="style.css" rel= "stylesheet" type="text/css">
 </head>
 <body>
 
