--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
   <link href="style.css" rel= "stylesheet" type="text/css">
 </head>
 <body>
+  <header>
 
+    <div class="rowbar">
+
+      <div class="logo">
+      <img src="LogoMakr_2iUVlX.png"/>
+      </div>
+
+    <ul class="mainnav">
+      <li class="active"><a href=""> HOME </a></li>
+      <li><a href=""> ABOUT ME </a></li>
+      <li><a href=""> PROJECTS </a></li>
+      <li><a href=""> RESUME </a></li>
+      <li><a href=""> CONTACT </a></li>
+
+    </ul>
+
+    </div>
+
+  </header>
 
 </body>
 
