--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="rowbar">
 
       <div class="logo">
-      <img src="LogoMakr_2iUVlX.png"/>
+      <img src="images/LogoMakr_2iUVlX.png"/>
       </div>
 
     <ul class="mainnav">
       <li class="active"><a href=""> HOME </a></li>
-      <li><a href=""> ABOUT ME </a></li>
-      <li><a href=""> PROJECTS </a></li>
-      <li><a href=""> RESUME </a></li>
-      <li><a href=""> CONTACT </a></li>
+      <li><a href="aboutme.html"> ABOUT ME </a></li>
+      <li><a href="projects.html"> PROJECTS </a></li>
+      <li><a href="resume.html"> RESUME </a></li>
+      <li><a href="contact.html"> CONTACT </a></li>
 
     </ul>
 
