--- a/aboutme.html
+++ b/aboutme.html
@@ -3,9 +3,18 @@
    <head>
      <title>About Me</title>
      <link href="aboutme.css" rel= "stylesheet" type="text/css">
+     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+     <script src="script.js"></script>
    </head>
  <body>
 
-   <p> Hi, Im Theo </p>
+   <header>
+     <div id="header"></div>
+   </header>
+    <p> Hi, Im Theo </p>
+   <footer>
+        <div id="footer"></div>
+   </footer>
+
  </body>
 </html>
