--- a/index.html
+++ b/index.html
@@ -5,28 +5,18 @@
   <meta name="viewport" content="widt = device-width, initial-scale=1">
   <title>Theo Hronowsky</title>
   <link href="style.css" rel= "stylesheet" type="text/css">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="script.js"></script>
+
 </head>
 <body>
   <header>
-
-    <div class="rowbar">
-
-      <div class="logo">
-      <img src="images/LogoMakr_2iUVlX.png"/>
-      </div>
-
-    <ul class="mainnav">
-      <li class="active"><a href=""> HOME </a></li>
-      <li><a href="aboutme.html"> ABOUT ME </a></li>
-      <li><a href="projects.html"> PROJECTS </a></li>
-      <li><a href="resume.html"> RESUME </a></li>
-      <li><a href="contact.html"> CONTACT </a></li>
-
-    </ul>
-
-    </div>
-
+    <div id="header"></div>
   </header>
+
+  <footer>
+       <div id="footer"></div>
+  </footer>
 
 </body>
 
