--- a/header.html
+++ b/header.html
@@ -1,17 +1,20 @@
 <style type="text/css">
 
 header{
-  background-image: url(images/download.jpg);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
+  background-color:  rgba(0, 0, 0, .5);
+  position:fixed;
+  width: 100%;
+  height: 10%;
+
+
 }
+
+
 
 
 .mainnav {
   float: right;
   list-style: none;
-  margin-top: 30px;
 }
 
 .mainnav li {
@@ -19,9 +22,8 @@ header{
 }
 
 .mainnav li a {
-  color: black;
+  color: white;
   text-decoration: none;
-  padding: 5px 20px;
   font-family: "Roboto", sans-serif;
   font-size: 15px;
 }
@@ -34,6 +36,14 @@ header{
   border: 1px solid black;
 
 }
+
+.logotopright {
+  width: auto;
+  height:auto;
+
+
+
+}
 </style>
 
 
@@ -41,10 +51,9 @@ header{
 
 
 <header>
-  <div class="header">
 
     <div class="logo">
-      <img src="images/LogoMakr_2iUVlX.png"/>
+      <img class="logotopright" src="images/logo1.png"/>
       </div>
 
     <ul class="mainnav">
@@ -56,6 +65,5 @@ header{
 
     </ul>
 
-  </div>
 
 </header>
