--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,36 @@
 <style type="text/css">
 
+footer {
+  margin-left: 0;
+  width: 100%;
+  background-color:  rgba(255, 255, 255, .5);
+  position: fixed;
+  bottom: 0;
+
+}
+
+.footer {
+  width: 100%;
+  height: 40px;
+
+}
+
+footer span {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+label{
+  color: black;
+}
+
+.links {
+  position:absolute;
+  right: 20px;
+  bottom: 5px;
+
+}
 </style>
 
 <footer>
