--- a/header.html
+++ b/header.html
@@ -2,11 +2,14 @@
 
 header{
   background-color:  rgba(0, 0, 0, .5);
-  position:fixed;
+  position: fixed;
   width: 100%;
-  height: 10%;
+  height: 20%;
+}
 
-
+.header{
+  width: 100%;
+  height: 20%;
 }
 
 
@@ -15,6 +18,7 @@ header{
 .mainnav {
   float: right;
   list-style: none;
+
 }
 
 .mainnav li {
@@ -22,6 +26,7 @@ header{
 }
 
 .mainnav li a {
+
   color: white;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
@@ -38,7 +43,7 @@ header{
 }
 
 .logotopright {
-  width: auto;
+  width: 3%;
   height:auto;
 
 
