--- a/header.html
+++ b/header.html
@@ -1,23 +1,29 @@
 <style type="text/css">
 
+
+
 header{
-  background-color:  rgba(0, 0, 0, .5);
+  background-color: #282c34;
   position: fixed;
   width: 100%;
-  height: 20%;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
-.header{
-  width: 100%;
-  height: 20%;
+.ContainHead{
+  width: 90%;
+  height: 60px;
+  margin: 0 auto;
+  position: relative;
 }
 
 
 
 
-.mainnav {
-  float: right;
-  list-style: none;
+.name {
+
+
 
 }
 
@@ -27,24 +33,17 @@ header{
 
 .mainnav li a {
 
-  color: white;
-  text-decoration: none;
+  color: #4c5364;
   font-family: "Roboto", sans-serif;
   font-size: 15px;
+
 }
 
 .mainnav li.active a {
   border: 1px solid black;
 }
 
-.mainnav li a:hover {
-  border: 1px solid black;
 
-}
-
-.logotopright {
-  width: 3%;
-  height:auto;
 
 
 
@@ -56,19 +55,18 @@ header{
 
 
 <header>
+  <div class="ContainHead">
+    <div class="Name">
+      <a href="index.html"> <center> Theo Hronowsky </center></a>
+    </div>
 
-    <div class="logo">
-      <img class="logotopright" src="images/logo1.png"/>
-      </div>
+
+
 
     <ul class="mainnav">
-      <li class="active"><a href="index.html"> HOME </a></li>
       <li><a href="aboutme.html"> ABOUT ME </a></li>
       <li><a href="projects.html"> PROJECTS </a></li>
       <li><a href="Resumedoc.html"> RESUME </a></li>
-      <li><a href="contact.html"> CONTACT </a></li>
-
     </ul>
-
-
+  </div>
 </header>
