--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@ label{
   color: black;
 }
 
-.links {
+.social {
   position:absolute;
   right: 20px;
   bottom: 5px;
@@ -39,7 +39,7 @@ label{
       <label>Website by</label>
       <a href="index.html">Theo Hronowsky</a>
     </span>
-    <div class="links">
+    <div class="social">
       <a href="https://www.linkedin.com/in/theo-hronowsky-29a1245a/" target = "_blank">
         <img src="images/linkedinicon.png" height="25" width="25">
       </a>
