--- a/projects.html
+++ b/projects.html
@@ -3,9 +3,18 @@
    <head>
      <title>Projects</title>
      <link href="projects.css" rel= "stylesheet" type="text/css">
+     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+     <script src="script.js"></script>
    </head>
  <body>
+   <header>
+     <div id="header"></div>
+   </header>
 
-   <p> Projects </p>
+
+
+   <footer>
+        <div id="footer"></div>
+   </footer>
  </body>
 </html>
